@@ -1,3 +1,4 @@
+ unfeature: no more nginx 0.6 support. not worth the hassle.
 0.683 (Nov. 10 2009)
  change: default max. reserved memory size changed form 16MB to 32 MB
  change: unused node garbage collection made a little more aggressive (max. 3 unused channels per channel search instead of 1)
